--- a/templates/default/capabilities.properties.erb
+++ b/templates/default/capabilities.properties.erb
@@ -1,4 +1,4 @@
-# This file is managed by Puppet! Any manual changes will probably be
+# This file is managed by Chef! Any manual changes will probably be
 # overridden.
 #
 # (template: bamboo-agent/templates/bamboo-capabilities.properties.erb)
