--- a/templates/default/init-script.erb
+++ b/templates/default/init-script.erb
@@ -1,11 +1,21 @@
 #!/bin/bash
 # bamboo-agent<%= @agent_id.to_s.ljust(4) %> Init script for running bamboo agent
 #
-# chkconfig: 2345 98 02
+# chkconfig:       2345 98 02
 #
-# description: Starts and stops bamboo agent <%= @agent_id %>
-
-# This is just a delegator to the Bamboo agent script.
+# description:     Starts and stops bamboo agent <%= @agent_id %>
+#
+### BEGIN INIT INFO
+# Provides:          bamboo-agent<%= @agent_id.to_s.ljust(4) %>
+# Required-Start:    $local_fs $remote_fs $network
+# Required-Stop:     $local_fs $remote_fs $network
+# Should-Start:      $named
+# Should-Stop:       $named
+# Default-Start:     2 3 4 5
+# Default-Stop:      0 1 6
+# Short-Description: Starts and stops bamboo agent <%= @agent_id %>
+# Description:       This is just a delegator to the Bamboo agent script.
+### END INIT INFO
 
 if [[ "$EUID" != '0' ]]; then
   echo 'This script must be run as root!'
